# blkchn-file-tracker

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bindings.rs  build.rs  rustfmt.toml
.devcontainer/: devcontainer.json
c/: Makefile  headers_wrapper.h  inotify_example.c
solana_program/: Cargo.toml  deploy.sh
solana_program/src/: entrypoint.rs  error.rs  event.rs  instruction.rs  lib.rs  processor.rs
solana_program/tests/: test_general.rs  test_processor.rs
src/: bindings.rs  main.rs
src/dir_watcher/: mod.rs
src/error/: mod.rs
src/event/: mod.rs
src/solana_client/: instruction.rs  mod.rs
