[package]
name = "file-event-tracker"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
borsh = "1.5.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
solana-program = "2.0.3"
thiserror = "1.0.64"

[dev-dependencies]
solana-program-test = "2.0.3"
solana-sdk = "2.0.3"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
